fixing input error and display issues: - fixing the negatif number error so that now righting a negatif number at the start of the expression it doesn't display an error - deleting the border,overflow and the direction propertise from the output css (irrelevant)

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,9 +74,6 @@ body{
     color:antiquewhite;
     font-size: 17px;
     opacity: 0.5;
-    direction:rtl;
-    border: solid;
-    overflow:hidden;
 }
 ::placeholder{
     color:antiquewhite;
